--- a/notebooks/Ch 1_Introduction.ipynb
+++ b/notebooks/Ch 1_Introduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project Pythia Notebook Template"
+    "# Multi Radar/ Multi Sensor (MRMS) System: Overview, Case Studies, and More!"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "source": [
     "## Overview\n",
-    "If you have an introductory paragraph, lead with it here! Keep it short and tied to your material, then be sure to continue into the required list of topics below,\n",
+    "This notebook walks users through MRMS, use case scenarios, and more. Follow through the notebook to learn more about MRMS and ways it can be used to aid in your research and decision-making. If you have an introductory paragraph, lead with it here! Keep it short and tied to your material, then be sure to continue into the required list of topics below,\n",
     "\n",
     "1. This is a numbered list of the specific topics\n",
     "1. These should map approximately to your main sections of content\n",
