--- a/notebooks/ch3_TXfloods.ipynb
+++ b/notebooks/ch3_TXfloods.ipynb
@@ -4,35 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chapter 3: July 2025 Texas Floods"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's start here! If you can directly link to an image relevant to your notebook, such as [canonical logos](https://github.com/numpy/numpy/blob/main/doc/source/_static/numpylogo.svg), do so here at the top of your notebook. You can do this with MyST Markdown syntax, outlined in [this MyST guide](https://mystmd.org/guide/figures), or you edit this cell to see a demonstration. **Be sure to include `alt` text for any embedded images to make your content more accessible.**\n",
-    "\n",
-    "```{image} ../thumbnails/thumbnail.png\n",
-    ":alt: Project Pythia logo\n",
-    ":width: 200px\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, title your notebook appropriately with a top-level Markdown header, `#` (see the very first cell above). Do not use this level header anywhere else in the notebook. Our book build process will use this title in the navbar, table of contents, etc. Keep it short, keep it descriptive. \n",
-    "\n",
-    "Follow this with a `---` cell to visually distinguish the transition to the prerequisites section."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "# MRMS Reflectivity Animation: July 4, 2025"
    ]
   },
   {
@@ -41,15 +13,14 @@
    "source": [
     "## Overview\n",
     "\n",
-    "This notebook demonstrates how to access, process, and visualize NOAA MRMS Composite Reflectivity (Low-Level) data using Python. You’ll learn how to:\n",
-    " - Generate timestamps for a given time range and format them for MRMS data access.\n",
-    " - Download and decompress .grib2.gz MRMS files from AWS.\n",
-    " - Load the data using xarray and cfgrib.\n",
-    " - Visualize reflectivity data with Cartopy.\n",
-    " - Save individual reflectivity frames and prepare them for animation.\n",
-    " - Create a time-lapse animation using matplotlib.animation.\n",
+    "#### This notebook demonstrates how to visualize and animate low-level composite reflectivity data from the Multi-Radar/Multi-Sensor (MRMS) system.\n",
     "\n",
-    "By the end of this notebook, you will have a working animation of radar reflectivity spanning a multi-day period, and a clear understanding of how to automate data retrieval and visualization workflows for radar datasets."
+    "We focus on the July 2025 Central Texas flood event using reflectivity data hosted on AWS. The workflow includes:\n",
+    "- Downloading data for specific timestamps\n",
+    "- Visualizing a static frame\n",
+    "- Animating a series of frames\n",
+    "\n",
+    "This example is ideal for students, forecasters, or researchers interested in radar visualization and remote sensing workflows."
    ]
   },
   {
@@ -192,6 +163,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "refl_norm, refl_cmap = ctables.registry.get_with_steps('NWSReflectivity', 5, 5)\n",
     "\n",
@@ -214,8 +192,7 @@
     "# 3. Plot\n",
     "fig = plt.figure(figsize=(10, 8))\n",
     "ax = plt.axes(projection=ccrs.PlateCarree())\n",
-    "# ax.set_extent([-106, -93, 25, 36], crs=ccrs.PlateCarree()) Edit - adjusting the extent to show just Texas\n",
-    "ax.set_extent([-106, -93, 25.84, 36.83], crs=ccrs.PlateCarree())\n",
+    "ax.set_extent([-106, -93, 25, 36], crs=ccrs.PlateCarree())\n",
     "\n",
     "ax.add_feature(cfeature.COASTLINE, linewidth=1)\n",
     "ax.add_feature(cfeature.BORDERS, linewidth=1)\n",
@@ -236,6 +213,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ma.masked_where(refl<5,refl)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -248,17 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from 
-     import datetime, timedelta\n",
-    "import urllib.request"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "\n",
     "start = datetime(2025, 7, 4, 0, 10, 40)\n",
     "end = datetime(2025, 7, 7, 0, 0, 0)\n",
     "step = timedelta(minutes=30)\n",
@@ -285,7 +263,7 @@
     "\n",
     "print(\"\\n Selected 6 timestamps:\")\n",
     "for ts in valid_timestamps:\n",
-    "    print(ts)"
+    "    print(ts)\n"
    ]
   },
   {
@@ -294,27 +272,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "import gzip\n",
-    "import tempfile\n",
-    "import xarray as xr\n",
-    "import numpy as np\n",
-    "import numpy.ma as ma\n",
-    "import matplotlib.pyplot as plt\n",
-    "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature\n",
-    "from metpy.plots import ctables\n",
-    "from matplotlib.animation import ArtistAnimation\n",
-    "from IPython.display import HTML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-
     "# Define the 6 known working timestamps (one every hour)\n",
     "timestamps = [\n",
     "    \"20250704-001040\",\n",
@@ -334,7 +291,7 @@
     "# Set up static map\n",
     "fig = plt.figure(figsize=(10, 8))\n",
     "ax = plt.axes(projection=ccrs.PlateCarree())\n",
-    "ax.set_extent([-106, -93, 25.84, 36.83], crs=ccrs.PlateCarree())\n",
+    "ax.set_extent([-106, -93, 25, 36], crs=ccrs.PlateCarree())\n",
     "ax.add_feature(cfeature.COASTLINE, linewidth=1)\n",
     "ax.add_feature(cfeature.BORDERS, linewidth=1)\n",
     "ax.add_feature(cfeature.STATES, linewidth=0.5)\n",
@@ -382,7 +339,7 @@
     "\n",
     "# Create and display animation\n",
     "anim = ArtistAnimation(fig, frames_six, interval=500, blit=True)\n",
-    "HTML(anim.to_jshtml())"
+    "HTML(anim.to_jshtml())\n"
    ]
   },
   {
@@ -391,110 +348,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional - Save locally with PillowWriter\n",
     "from matplotlib.animation import PillowWriter\n",
     "\n",
     "# Save animation as a .gif\n",
     "anim.save(\"mrms_reflectivity_animation.gif\", writer=PillowWriter(fps=2))\n",
     "\n",
     "print(\"Animation saved as 'mrms_reflectivity_animation.gif'\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize animation container\n",
-    "frames_six = []\n",
-    "\n",
-    "# Set up static map\n",
-    "fig = plt.figure(figsize=(10, 8))\n",
-    "ax = plt.axes(projection=ccrs.PlateCarree())\n",
-    "ax.set_extent([-106, -93, 25.84, 36.83], crs=ccrs.PlateCarree())\n",
-    "ax.add_feature(cfeature.COASTLINE, linewidth=1)\n",
-    "ax.add_feature(cfeature.BORDERS, linewidth=1)\n",
-    "ax.add_feature(cfeature.STATES, linewidth=0.5)\n",
-    "\n",
-    "# Prepare timestamp overlay\n",
-    "timestamp_text = ax.text(\n",
-    "    0.01, 0.98, \"\", transform=ax.transAxes,\n",
-    "    ha='left', va='top', fontsize=12, color='white',\n",
-    "    bbox=dict(facecolor='black', alpha=0.5, boxstyle='round')\n",
-    ")\n",
-    "\n",
-    "# Loop through timestamps and collect frames\n",
-    "for ts in timestamps:\n",
-    "    print(f\"Loading {ts}...\")\n",
-    "    try:\n",
-    "        url = (\n",
-    "            f\"https://noaa-mrms-pds.s3.amazonaws.com/CONUS/LayerCompositeReflectivity_Low_00.50/\"\n",
-    "            f\"{ts[:8]}/MRMS_LayerCompositeReflectivity_Low_00.50_{ts}.grib2.gz\"\n",
-    "        )\n",
-    "        response = urllib.request.urlopen(url)\n",
-    "        compressed_file = response.read()\n",
-    "\n",
-    "        with tempfile.NamedTemporaryFile(suffix=\".grib2\") as f:\n",
-    "            f.write(gzip.decompress(compressed_file))\n",
-    "            f.flush()\n",
-    "            data_in = xr.load_dataarray(f.name, engine='cfgrib', decode_timedelta=True)\n",
-    "\n",
-    "        # Extract coordinates and reflectivity data\n",
-    "        lons = data_in.longitude.values\n",
-    "        lats = data_in.latitude.values\n",
-    "        refl = data_in.values\n",
-    "\n",
-    "        if lons.ndim == 1 and lats.ndim == 1:\n",
-    "            lons, lats = np.meshgrid(lons, lats)\n",
-    "\n",
-    "        # Clear previous mesh\n",
-    "        for coll in ax.collections:\n",
-    "            coll.remove()\n",
-    "\n",
-    "        # Plot reflectivity\n",
-    "        mesh = ax.pcolormesh(\n",
-    "            lons, lats, ma.masked_where(refl < 5, refl),\n",
-    "            cmap=refl_cmap,\n",
-    "            norm=refl_norm,\n",
-    "            transform=ccrs.PlateCarree()\n",
-    "        )\n",
-    "\n",
-    "        # Add timestamp overlay\n",
-    "        timestamp_text.set_text(f\"{ts[:4]}-{ts[4:6]}-{ts[6:8]} {ts[9:11]}:{ts[11:13]} UTC\")\n",
-    "\n",
-    "        # Add colorbar once (after first successful frame)\n",
-    "        # Add colorbar once (after first successful frame)\n",
-    "        if len(frames_six) == 0:\n",
-    "            fig.canvas.draw()  # Ensure canvas is initialized\n",
-    "            cbar = plt.colorbar(mesh, ax=ax, orientation='vertical', pad=0.02, shrink=0.7)\n",
-    "            cbar.set_label(\"Reflectivity (dBZ)\")\n",
-    "\n",
-    "        # Save frame\n",
-    "        frames_six.append([mesh, timestamp_text])\n",
-    "\n",
-    "    except Exception as e:\n",
-    "        print(f\"Skipped {ts} → {e}\")\n",
-    "        continue\n",
-    "\n",
-    "# Create and display animation\n",
-    "anim = ArtistAnimation(fig, frames_six, interval=500, blit=True)\n",
-    "HTML(anim.to_jshtml())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optional - Save locally with PillowWriter\n",
-    "# from matplotlib.animation import PillowWriter\n",
-    "\n",
-    "# # Save animation as a .gif\n",
-    "# anim.save(\"mrms_reflectivity_animation.gif\", writer=PillowWriter(fps=2))\n",
-    "\n",
-    "# print(\"Animation saved as 'mrms_reflectivity_animation.gif'\")\n"
    ]
   },
   {
@@ -538,6 +397,106 @@
    "source": [
     "### Another content subsection\n",
     "Keep up the good work! A note, *try to avoid using code comments as narrative*, and instead let them only exist as brief clarifications where necessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Your second content section\n",
+    "Here we can move on to our second objective, and we can demonstrate..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A subsection to the second section\n",
+    "\n",
+    "#### a quick demonstration\n",
+    "\n",
+    "##### of further and further\n",
+    "\n",
+    "###### header levels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as well as $m = a * t / h$ text! Similarly, you have access to other $\\LaTeX$ equation [**functionality**](https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Typesetting%20Equations.html) via MathJax:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\dot{x} & = \\sigma(y-x) \\\\\n",
+    "\\dot{y} & = \\rho x - y - xz \\\\\n",
+    "\\dot{z} & = -\\beta z + xy\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check out [**any number of helpful Markdown resources**](https://www.markdownguide.org/basic-syntax/) for further customizing your notebooks and the [**MyST Syntax Overview**](https://mystmd.org/guide/syntax-overview) for MyST-specific formatting information. Don't hesitate to ask questions if you have problems getting it to look *just right*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Last Section\n",
+    "\n",
+    "You can add [admonitions using MyST syntax](https://mystmd.org/guide/admonitions):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{note}\n",
+    "Your relevant information here!\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some other admonitions you can put in ([there are 10 total](https://mystmd.org/guide/admonitions#admonitions-list)):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{hint}\n",
+    "A helpful hint.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{warning}\n",
+    "Be careful!\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{danger}\n",
+    "Scary stuff be here.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also suggest checking out Jupyter Book's [brief demonstration](https://jupyterbook.org/content/metadata.html#jupyter-cell-tags) on adding cell tags to your cells in Jupyter Notebook, Lab, or manually. Using these cell tags can allow you to [customize](https://jupyterbook.org/interactive/hiding.html) how your code content is displayed and even [demonstrate errors](https://jupyterbook.org/content/execute.html#dealing-with-code-that-raises-errors) without altogether crashing our loyal army of machines!"
    ]
   },
   {
