Change data request function on ch2

--- a/notebooks/ch2-mar-2023-tornado_jdh.ipynb
+++ b/notebooks/ch2-mar-2023-tornado_jdh.ipynb
@@ -84,7 +84,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
-    "import cartopy.feature as cfeature"
+    "import cartopy.feature as cfeature\n",
+    "\n",
+    "aws = s3fs.S3FileSystem(anon=True)"
    ]
   },
   {
@@ -234,38 +236,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fetch_mrms_data(\n",
+    "# def fetch_mrms_data(\n",
+    "#     variable: str,\n",
+    "#     yyyymmdd: str,\n",
+    "#     hh: str,\n",
+    "#     lon_min: float = None,\n",
+    "#     lat_min: float = None,\n",
+    "#     lon_max: float = None,\n",
+    "#     lat_max: float = None\n",
+    "# ) -> xr.DataArray:\n",
+    "#     \"\"\"\n",
+    "#     Downloads and loads MRMS data from NOAA PDS, with optional spatial filtering.\n",
+    "\n",
+    "#     Parameters:\n",
+    "#         variable (str): MRMS product name (e.g., 'MergedReflectivityQC').\n",
+    "#         yyyymmdd (str): Date in YYYYMMDD format.\n",
+    "#         hh (str): Hour in HH format (00–23 UTC).\n",
+    "#         lon_min, lat_min, lon_max, lat_max (float, optional): Bounding box for spatial subset. \n",
+    "\n",
+    "#     Returns:\n",
+    "#         xarray.DataArray: Decoded MRMS data array, optionally subset by lat/lon.\n",
+    "\n",
+    "#     Example use: \n",
+    "#         data = fetch_mrms_data('MergedReflectivityQC', '20230325', '02', lon_min=-96, lat_min=29, lon_max=-80, lat_max=38)\n",
+    "#     \"\"\"\n",
+    "#     url = (\n",
+    "#         f\"https://noaa-mrms-pds.s3.amazonaws.com/CONUS/{variable}/\"\n",
+    "#         f\"{yyyymmdd}/MRMS_{variable}_{yyyymmdd}-{hh}0000.grib2.gz\"\n",
+    "#     )\n",
+    "\n",
+    "#     response = urllib.request.urlopen(url)\n",
+    "#     compressed_file = response.read()\n",
+    "\n",
+    "#     with tempfile.NamedTemporaryFile(suffix=\".grib2\") as f:\n",
+    "#         f.write(gzip.decompress(compressed_file))\n",
+    "#         data_in = xr.load_dataarray(f.name, engine='cfgrib', decode_timedelta=True)\n",
+    "\n",
+    "#     # Optional spatial filtering\n",
+    "#     if all(v is not None for v in [lon_min, lat_min, lon_max, lat_max]):\n",
+    "#         data_in = data_in.sel(\n",
+    "#             latitude=slice(lat_max, lat_min),  # descending order\n",
+    "#             longitude=slice(360 - abs(lon_min), 360 - abs(lon_max))        \n",
+    "#         )\n",
+    "\n",
+    "#     return data_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_available_files(\n",
     "    variable: str,\n",
     "    yyyymmdd: str,\n",
-    "    hh: str,\n",
+    "    hh: str\n",
+    "):\n",
+    "    \n",
+    "    files_list = []\n",
+    "\n",
+    "    available_files = aws.ls(f'noaa-mrms-pds/CONUS/{variable}/{yyyymmdd}/', refresh=True)\n",
+    "    for file in available_files:\n",
+    "        file_hour = file[-15:-13]\n",
+    "        if file_hour == hh:\n",
+    "            files_list.append(file)\n",
+    "\n",
+    "    if len(files_list) == 0:\n",
+    "        raise ValueError(f\"No files found for {variable} on {yyyymmdd} at hour {hh}.\")\n",
+    "    else:    \n",
+    "        return files_list\n",
+    "\n",
+    "def fetch_mrms_data(    \n",
+    "    file: str,\n",
     "    lon_min: float = None,\n",
     "    lat_min: float = None,\n",
     "    lon_max: float = None,\n",
     "    lat_max: float = None\n",
-    ") -> xr.DataArray:\n",
-    "    \"\"\"\n",
-    "    Downloads and loads MRMS data from NOAA PDS, with optional spatial filtering.\n",
-    "\n",
-    "    Parameters:\n",
-    "        variable (str): MRMS product name (e.g., 'MergedReflectivityQC').\n",
-    "        yyyymmdd (str): Date in YYYYMMDD format.\n",
-    "        hh (str): Hour in HH format (00–23 UTC).\n",
-    "        lon_min, lat_min, lon_max, lat_max (float, optional): Bounding box for spatial subset. \n",
-    "\n",
-    "    Returns:\n",
-    "        xarray.DataArray: Decoded MRMS data array, optionally subset by lat/lon.\n",
-    "\n",
-    "    Example use: \n",
-    "        data = fetch_mrms_data('MergedReflectivityQC', '20230325', '02', lon_min=-96, lat_min=29, lon_max=-80, lat_max=38)\n",
-    "    \"\"\"\n",
-    "    url = (\n",
-    "        f\"https://noaa-mrms-pds.s3.amazonaws.com/CONUS/{variable}/\"\n",
-    "        f\"{yyyymmdd}/MRMS_{variable}_{yyyymmdd}-{hh}0000.grib2.gz\"\n",
-    "    )\n",
-    "\n",
+    "):\n",
+    "    url = (f\"https://noaa-mrms-pds.s3.amazonaws.com/{file[14:]}\")\n",
     "    response = urllib.request.urlopen(url)\n",
-    "    compressed_file = response.read()\n",
-    "\n",
+    "    compressed_file = response.read()        \n",
     "    with tempfile.NamedTemporaryFile(suffix=\".grib2\") as f:\n",
     "        f.write(gzip.decompress(compressed_file))\n",
     "        data_in = xr.load_dataarray(f.name, engine='cfgrib', decode_timedelta=True)\n",
@@ -347,8 +398,12 @@
    "outputs": [],
    "source": [
     "#Grab 2 hours of data for plotting\n",
-    "cref1z = fetch_mrms_data('CREF_1HR_MAX_00.50', '20230325', '01')\n",
-    "cref2z = fetch_mrms_data('CREF_1HR_MAX_00.50', '20230325', '02')\n",
+    "cref1files = find_available_files('CREF_1HR_MAX_00.50', '20230325', '01')\n",
+    "cref1z = fetch_mrms_data(cref1files[0])    \n",
+    "\n",
+    "cref2files = find_available_files('CREF_1HR_MAX_00.50', '20230325', '02')\n",
+    "cref2z = fetch_mrms_data(cref2files[0])\n",
+    "\n",
     "# Mask fill values for both datasets\n",
     "masked1 = np.ma.masked_where(cref1z == -99.0, cref1z)\n",
     "masked2 = np.ma.masked_where(cref2z == -99.0, cref2z)"
@@ -423,8 +478,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "precip_1z = fetch_mrms_data('PrecipRate_00.00', '20230325', '01') # Precip Rate\n",
-    "precip_2z = fetch_mrms_data('PrecipRate_00.00', '20230325', '02')\n",
+    "precip1files= find_available_files('PrecipRate_00.00', '20230325', '01') # Precip Rate\n",
+    "precip_1z = fetch_mrms_data(precip1files[0]) \n",
+    "precip2files = find_available_files('PrecipRate_00.00', '20230325', '02')\n",
+    "precip_2z = fetch_mrms_data(precip2files[0])\n",
     "masked1 = np.ma.masked_where(precip_1z <= 0, precip_1z)\n",
     "masked2 = np.ma.masked_where(precip_2z <= 0, precip_2z)"
    ]
@@ -489,8 +546,10 @@
    "outputs": [],
    "source": [
     "# MultiSensor_QPE_01H_Pass1_00.00\n",
-    "QPE_1z = fetch_mrms_data('MultiSensor_QPE_01H_Pass1_00.00', '20230325', '01') # QPE: Quantified Precip Estimation - Offered hourly.\n",
-    "QPE_2z = fetch_mrms_data('MultiSensor_QPE_01H_Pass1_00.00', '20230325', '02') \n",
+    "QPE1files = find_available_files('MultiSensor_QPE_01H_Pass1_00.00', '20230325', '01') # QPE: Quantified Precip Estimation - Offered hourly.\n",
+    "QPE_1z = fetch_mrms_data(QPE1files[0]) \n",
+    "QPE2files = find_available_files('MultiSensor_QPE_01H_Pass1_00.00', '20230325', '02')\n",
+    "QPE_2z = fetch_mrms_data(QPE2files[0])\n",
     "masked1 = np.ma.masked_where(QPE_1z <= 0, QPE_1z)\n",
     "masked2 = np.ma.masked_where(QPE_2z <= 0, QPE_2z)"
    ]
@@ -535,13 +594,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -555,8 +607,10 @@
    "outputs": [],
    "source": [
     "# MultiSensor_QPE_01H_Pass2_00.00\n",
-    "QPE_1z_p2 = fetch_mrms_data('MultiSensor_QPE_01H_Pass2_00.00', '20230325', '01') # QPE: Quantified Precip Estimation - last hour, 2nd pass\n",
-    "QPE_2z_p2 = fetch_mrms_data('MultiSensor_QPE_01H_Pass2_00.00', '20230325', '02') \n",
+    "QPE1zp2files = find_available_files('MultiSensor_QPE_01H_Pass2_00.00', '20230325', '01') # QPE: Quantified Precip Estimation - last hour, 2nd pass\n",
+    "QPE_1z_p2 = fetch_mrms_data(QPE1zp2files[0]) \n",
+    "QPE2files = find_available_files('MultiSensor_QPE_01H_Pass2_00.00', '20230325', '02')\n",
+    "QPE_2z_p2 = fetch_mrms_data(QPE2files[0])\n",
     "masked1 = np.ma.masked_where(QPE_1z_p2 <= 0, QPE_1z_p2)\n",
     "masked2 = np.ma.masked_where(QPE_2z_p2 <= 0, QPE_2z_p2)"
    ]
@@ -601,13 +655,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -620,9 +667,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RadarOnly_QPE_01H_00.00\n",
-    "RQPE_1z = fetch_mrms_data('RadarOnly_QPE_01H_00.00', '20230325', '01') # RadarOnly_QPE: Radar Only Quantified Precip Estimation - last hour\n",
-    "RQPE_2z = fetch_mrms_data('RadarOnly_QPE_01H_00.00', '20230325', '02') \n",
+    "RQPE1files = find_available_files('RadarOnly_QPE_01H_00.00', '20230325', '01') # RadarOnly_QPE: Radar Only Quantified Precip Estimation - last hour\n",
+    "RQPE_1z = fetch_mrms_data(RQPE1files[0])\n",
+    "RQPE2files = find_available_files('RadarOnly_QPE_01H_00.00', '20230325', '02')\n",
+    "RQPE_2z = fetch_mrms_data(RQPE2files[0])\n",
     "masked1 = np.ma.masked_where(RQPE_1z <= 0, RQPE_1z)\n",
     "masked2 = np.ma.masked_where(RQPE_2z <= 0, RQPE_2z)"
    ]
@@ -665,13 +713,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -831,9 +872,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:notebook] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-notebook-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -845,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   },
   "nbdime-conflicts": {
    "local_diff": [
