--- a/notebooks/ch2-mar-2023-tornado_jdh.ipynb
+++ b/notebooks/ch2-mar-2023-tornado_jdh.ipynb
@@ -49,7 +49,7 @@
     " - Precipitation Rates  \n",
     " - Rotation  \n",
     " - Hail Swaths - *Under Construction!* \n",
-    " - Storm Intensity (Vertically integrated liquid) - *Coming soon!*\n",
+    " - Storm Intensity (Vertically integrated liquid) - *Under Construction!*\n",
     "\n",
     "To support this analysis, the chapter introduces a practical method for accessing MRMS data directly from an AWS server. It guides readers through defining a map and customizing its spatial extent to filter and process data relevant to the event. By showcasing multiple variations of each MRMS variable, the chapter highlights the accessibility and versatility of these datasets for visualizing high-impact weather events. A focused case study on the Rolling Fork tornado illustrates how several hours of MRMS data can be leveraged to gain insight into storm properties of a significant weather event."
    ]
@@ -1256,10 +1256,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Coming Soon!\n",
-    "# VIL_00.50\t\t\n",
-    "# VIL_Density_00.50\t\t\t\n",
-    "# VIL_Max_120min_00.50"
+    "# VIL_00.50\n",
+    "VILFiles1 = find_available_files('VIL_00.50', '20230325', '01')\n",
+    "VIL1z = fetch_mrms_data(VILFiles1[0])\n",
+    "VILFiles2 = find_available_files('VIL_00.50', '20230325', '02')\n",
+    "VIL2z = fetch_mrms_data(VILFiles2[0])\n",
+    "masked1 = np.ma.masked_where(VIL1z <= 0, VIL1z)\n",
+    "masked2 = np.ma.masked_where(VIL2z <= 0, VIL2z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define bounds for Dixie Alley\n",
+    "projection = ccrs.LambertConformal(central_longitude=-88, central_latitude=34)\n",
+    "\n",
+    "# Create side-by-side subplots\n",
+    "fig, axes = plt.subplots(\n",
+    "    1, 2, figsize=(16, 8),\n",
+    "    subplot_kw={'projection': projection},\n",
+    "    gridspec_kw={'bottom': 0.2}  # leave room for shared colorbar\n",
+    ")\n",
+    "\n",
+    "meshes = []\n",
+    "for ax, masked, title in zip(axes, [masked1, masked2], [\"(a) 3/25/2023 @ 01z\", \"(b) 3/25/2023 @ 02z\"]):\n",
+    "    ax.set_extent([lon_min, lon_max, lat_min, lat_max], crs=ccrs.PlateCarree())\n",
+    "    ax.add_feature(cfeature.STATES.with_scale('50m'), edgecolor='gray')\n",
+    "    ax.add_feature(cfeature.BORDERS.with_scale('50m'), linestyle='--', edgecolor='black')\n",
+    "    ax.add_feature(cfeature.COASTLINE.with_scale('50m'))\n",
+    "    \n",
+    "    mesh = ax.pcolormesh(\n",
+    "        VIL1z.longitude, VIL1z.latitude, masked,\n",
+    "        cmap='turbo', transform=ccrs.PlateCarree(), shading='auto'\n",
+    "    )\n",
+    "    ax.set_title(title, fontsize=15)\n",
+    "    meshes.append(mesh)\n",
+    "\n",
+    "# Add shared colorbar beneath both plots\n",
+    "cbar_ax = fig.add_axes([0.25, 0.25, 0.5, 0.02])  # [left, bottom, width, height]\n",
+    "cbar = fig.colorbar(meshes[0], cax=cbar_ax, orientation='horizontal')\n",
+    "cbar.set_label('Units')\n",
+    "plt.suptitle('Vertically Integrated Liquid:', fontsize='20', x=0.5, y=0.85, horizontalalignment='center', verticalalignment='top')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vertically Integrated Liquid Density"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VIL_Density_00.50\n",
+    "VILDFiles1 = find_available_files('VIL_Density_00.50', '20230325', '01')\n",
+    "VILD1z = fetch_mrms_data(VILDFiles1[0])\n",
+    "VILDFiles2 = find_available_files('VIL_Density_00.50', '20230325', '02')\n",
+    "VILD2z = fetch_mrms_data(VILDFiles2[0])\n",
+    "masked1 = np.ma.masked_where(VILD1z <= 0, VILD1z)\n",
+    "masked2 = np.ma.masked_where(VILD2z <= 0, VILD2z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define bounds for Dixie Alley\n",
+    "projection = ccrs.LambertConformal(central_longitude=-88, central_latitude=34)\n",
+    "\n",
+    "# Create side-by-side subplots\n",
+    "fig, axes = plt.subplots(\n",
+    "    1, 2, figsize=(16, 8),\n",
+    "    subplot_kw={'projection': projection},\n",
+    "    gridspec_kw={'bottom': 0.2}  # leave room for shared colorbar\n",
+    ")\n",
+    "\n",
+    "meshes = []\n",
+    "for ax, masked, title in zip(axes, [masked1, masked2], [\"(a) 3/25/2023 @ 01z\", \"(b) 3/25/2023 @ 02z\"]):\n",
+    "    ax.set_extent([lon_min, lon_max, lat_min, lat_max], crs=ccrs.PlateCarree())\n",
+    "    ax.add_feature(cfeature.STATES.with_scale('50m'), edgecolor='gray')\n",
+    "    ax.add_feature(cfeature.BORDERS.with_scale('50m'), linestyle='--', edgecolor='black')\n",
+    "    ax.add_feature(cfeature.COASTLINE.with_scale('50m'))\n",
+    "    \n",
+    "    mesh = ax.pcolormesh(\n",
+    "        VILD1z.longitude, VILD1z.latitude, masked,\n",
+    "        cmap='turbo', transform=ccrs.PlateCarree(), shading='auto'\n",
+    "    )\n",
+    "    ax.set_title(title, fontsize=15)\n",
+    "    meshes.append(mesh)\n",
+    "\n",
+    "# Add shared colorbar beneath both plots\n",
+    "cbar_ax = fig.add_axes([0.25, 0.25, 0.5, 0.02])  # [left, bottom, width, height]\n",
+    "cbar = fig.colorbar(meshes[0], cax=cbar_ax, orientation='horizontal')\n",
+    "cbar.set_label('Units')\n",
+    "plt.suptitle('Vertically Integrated Liquid Density:', fontsize='20', x=0.5, y=0.85, horizontalalignment='center', verticalalignment='top')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 120-Minute Vertically Integrated Liquid Maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VIL_Max_120min_00.50\n",
+    "VILMFiles1 = find_available_files('VIL_Max_120min_00.50', '20230325', '01')\n",
+    "VILM1z = fetch_mrms_data(VILMFiles1[0])\n",
+    "VILMFiles2 = find_available_files('VIL_Max_120min_00.50', '20230325', '02')\n",
+    "VILM2z = fetch_mrms_data(VILMFiles2[0])\n",
+    "masked1 = np.ma.masked_where(VILM1z <= 0, VILM1z)\n",
+    "masked2 = np.ma.masked_where(VILM2z <= 0, VILM2z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define bounds for Dixie Alley\n",
+    "projection = ccrs.LambertConformal(central_longitude=-88, central_latitude=34)\n",
+    "\n",
+    "# Create side-by-side subplots\n",
+    "fig, axes = plt.subplots(\n",
+    "    1, 2, figsize=(16, 8),\n",
+    "    subplot_kw={'projection': projection},\n",
+    "    gridspec_kw={'bottom': 0.2}  # leave room for shared colorbar\n",
+    ")\n",
+    "\n",
+    "meshes = []\n",
+    "for ax, masked, title in zip(axes, [masked1, masked2], [\"(a) 3/25/2023 @ 01z\", \"(b) 3/25/2023 @ 02z\"]):\n",
+    "    ax.set_extent([lon_min, lon_max, lat_min, lat_max], crs=ccrs.PlateCarree())\n",
+    "    ax.add_feature(cfeature.STATES.with_scale('50m'), edgecolor='gray')\n",
+    "    ax.add_feature(cfeature.BORDERS.with_scale('50m'), linestyle='--', edgecolor='black')\n",
+    "    ax.add_feature(cfeature.COASTLINE.with_scale('50m'))\n",
+    "    \n",
+    "    mesh = ax.pcolormesh(\n",
+    "        VILM1z.longitude, VILM1z.latitude, masked,\n",
+    "        cmap='turbo', transform=ccrs.PlateCarree(), shading='auto'\n",
+    "    )\n",
+    "    ax.set_title(title, fontsize=15)\n",
+    "    meshes.append(mesh)\n",
+    "\n",
+    "# Add shared colorbar beneath both plots\n",
+    "cbar_ax = fig.add_axes([0.25, 0.25, 0.5, 0.02])  # [left, bottom, width, height]\n",
+    "cbar = fig.colorbar(meshes[0], cax=cbar_ax, orientation='horizontal')\n",
+    "cbar.set_label('Units')\n",
+    "plt.suptitle('120-Minute Vertically Integrated Liqud Maximum:', fontsize='20', x=0.5, y=0.85, horizontalalignment='center', verticalalignment='top')\n",
+    "plt.show()"
    ]
   },
   {
@@ -1291,6 +1452,13 @@
    "metadata": {},
    "source": [
     "## Resources and references\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOAA/NSSL, 2025: Multi-Radar/Multi-Sensor System (MRMS). National Severe Storms Laboratory. [https://www.nssl.noaa.gov/projects/mrms/](https://www.nssl.noaa.gov/projects/mrms/)"
    ]
   },
   {
