--- a/notebooks/ch3_TXfloods.ipynb
+++ b/notebooks/ch3_TXfloods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MRMS Reflectivity Animation: July 4, 2025"
+    "# Chapter 3: July 2025 Central TX Floods"
    ]
   },
   {
